Revision history for VCtools

0.14	

	*	bug fixes:
		`vc help` with no args now works properly again
	*	base command improvements:
		added version variable for `vc version` or `--version` switch
			(assuming new enough version of App::Cmd)

0.13	2014-01-23		e2af02f2c5

	*	bug fixes:
		no longer get errors for using the same ArrayRef %info method twice in one command
	*	base command improvements:
		now printing "recovery commands" when a command fails
	*	new commands:
		vc stash
		vc unstash
		vc unstage
		vc push
	*	modified commands:
		vc info: no longer using commas to separate elements in ArrayRef %info methods
		vc self-upgrade: can upgrade a Perl prereq
	*	new %info methods:
		%staged_files
	*	modified action directives:
		code: now using { } (@ is informally deprecated)
	*	custom command improvements:
		arguments can now have list validation
		can replace Files with the more general <Trailing>
	*	improvements in config file processing:
		custom commands can override internal commands
	*	general cleanup and refactoring

0.12	2013-11-27		24758697af

	*	bug fixes:
		corrected error message when VC section in config is improperly formatted
		redefine "bright white" as "bold whatever-color-you-use-for-text"
	*	new global switches:
		--default_yn

0.11	2013-11-21		b7eca1d9c3

	FIRST OFFICIAL VERSION USED BY CO-WORKERS
	*	bug fixes:
		better handling of symlinks
		fix when %cur_branch tries to return two branches at once
		fix confirm directives
	*	base command improvements:
		prereqs now installed in a separate extlib/
		some tweaks to smooth install process
	*	modified commands:
		vc commands: now shows custom commands
	*	new global switches:
		--policy
	*	new %info methods:
		%branches
		%remote_branches
		%tags
	*	new validation directives:
		Verify = clean
	*	custom command improvements:
		arguments can now have descriptions
	*	initial implementation of custom info methods
	*	general cleanup and refactoring
	*	unit test improvements

0.10	2013-11-04		08a883ecf9