@@ -56,6 +56,10 @@
 			git branch
 		---
 
+		unbranch <<---
+			git checkout %Mainline
+		---
+
 		# remember: %info methods record the state as of the beginning of the command
 		# therefore, %is_dirty will remain true (if it was before) even after the stash
 		sync <<---
