@@ -4,6 +4,8 @@ Revision history for VCtools
 
 	*	bug fixes:
 		`vc help` with no args now works properly again
+	*	new commands:
+		vc unbranch
 	*	base command improvements:
 		added version variable for `vc version` or `--version` switch
 			(assuming new enough version of App::Cmd)
